Configure React app for deployment to GitHub Pages

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://media.licdn.com/dms/image/D5603AQErkVMB6_7Q1w/profile-displayphoto-shrink_800_800/0/1676157288858?e=1686182400&v=beta&t=tzNsSdZYGIGa2OKo4ZuX4lJYr9oHgO9lTjtjNXNjlZs" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
